# reipack

./: .gitignore  Cargo.toml  README.md  main.py  run.toml  score_closeness.py  viewer.html
src/: geometry.rs  main.rs  nn.rs  nn2.rs  traits.rs
src/algorithms/: mod.rs
src/algorithms/choosing/: minmax.rs  random.rs
src/algorithms/packing/: iterative_random.rs  random.rs
src/heuristics/: closeness.rs  closeness_score.rs  mod.rs  score.rs  spread.rs  spread_score.rs
