[package]
name = "reipack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
base64 = "0.21.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.3"
neun = { git = "https://github.com/invpt/neun" }
rayon = "1.7.0"
crossbeam = "0.8.2"
